# ai_tools

./: .gitignore  Astrox.toml  Cargo.toml  readme.md
src/backend/: :memory:  Cargo.toml
src/backend/data/: conversations.db
src/backend/src/: check_serde.rs  main.rs
src/backend/src/api/: mod.rs
src/backend/src/api/agent/: agent_loop.rs  chat.rs  config.rs  conversations.rs  mod.rs  sqlite_memory.rs  streaming.rs  types.rs  websocket.rs
src/backend/src/api/agent/core/: agent_loop.rs  logging.rs  mod.rs  streaming.rs  types.rs  utils.rs
src/backend/src/api/agent/memory/: mod.rs  sqlite_memory.rs
src/backend/src/api/agent/service/: chat.rs  config.rs  conversations.rs  mod.rs  naming.rs  utils.rs  websocket.rs
src/backend/src/api/agent/testing/: mod.rs  routes.rs  storage.rs  tests.rs
src/backend/src/api/agent/tools/: README.md  agent_tool.rs  chromadb.rs  financial_data.rs  mod.rs  registry.rs  selector.rs  trait.rs  (+2 more)
src/backend/src/api/chromadb/: client.rs  mod.rs  types.rs
src/backend/src/api/default_configs/: mod.rs  sqlite_storage.rs  types.rs
src/backend/src/api/games/: mod.rs  one_of_fifteen.rs  service.rs  types.rs  websocket.rs
src/backend/src/api/html_to_markdown/: post.rs
src/backend/src/api/json_to_toon/: post.rs
src/backend/src/api/llama_server/: get_config.rs  get_logs.rs  get_models.rs  get_status.rs  logs_reader.rs  mod.rs  post_config.rs  post_start.rs  post_stop.rs  types.rs  websocket.rs
src/backend/src/api/model_notes/: delete_note.rs  get_default.rs  get_notes.rs  mod.rs  post_note.rs  sqlite_storage.rs  types.rs
src/backend/src/api/parquet_to_txt/: post.rs
src/backend/src/api/pdf_to_markdown/: post.rs
src/backend/src/api/sd_server/: delete_image.rs  get_config.rs  get_images.rs  logs_reader.rs  mod.rs  model_sets.rs  model_sets_handlers.rs  post_config.rs  post_start.rs  storage.rs  types.rs  websocket.rs
src/backend/src/api/text_to_tokens/: post.rs
src/backend/src/api/url_to_markdown/: post.rs
src/backend/src/args/: collect_args.rs
src/backend/src/markdown_utils/: clean.rs  convert.rs  extract.rs  links.rs  mod.rs
src/backend/src/services/: agent.rs  chromadb.rs  converters.rs  games.rs  llama_server.rs  mod.rs  model_notes.rs  sd_server.rs
src/backend/src/utils/: tokenizer.rs
(+319 files in other folders)
